# Rust-AirDrop-Clone

./: Cargo.toml  README.md  error3.txt  error5.txt  error5_utf8.txt  errors4.txt
fastshare_ui/: README.md  analyze.txt  analyze_output.txt  analyze_v2.txt  analyze_v3.txt  flutter_error_tail.txt  flutter_error_tail_utf8.txt  pubspec.yaml  search_results.txt
fastshare_ui/android/app/: build.gradle.kts
fastshare_ui/integration_test/: simple_test.dart
fastshare_ui/ios/Runner/: Info.plist
fastshare_ui/ios/Runner.xcodeproj/: project.pbxproj
fastshare_ui/lib/: main.dart
fastshare_ui/lib/models/: device_info.dart  history_item.dart  transfer_progress.dart
fastshare_ui/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
fastshare_ui/lib/stores/: fastshare_store.dart  fastshare_store.g.dart
fastshare_ui/lib/ui/: theme.dart
fastshare_ui/lib/ui/components/: device_grid.dart  glass_button.dart  glass_card.dart  received_stack.dart  search_bar.dart  settings_sheet.dart  settings_widgets.dart  (+1 more)
fastshare_ui/lib/utils/: extensions.dart
fastshare_ui/linux/: CMakeLists.txt
fastshare_ui/linux/flutter/: generated_plugins.cmake
fastshare_ui/linux/runner/: my_application.cc
fastshare_ui/macos/Flutter/: GeneratedPluginRegistrant.swift
fastshare_ui/macos/Runner.xcodeproj/: project.pbxproj
fastshare_ui/rust/: Cargo.toml  build_aarch64.txt  build_err_verbose.txt  build_final.txt  build_full.txt  build_log.txt  build_log_json.txt  build_verbose.txt  cargo_err.txt
fastshare_ui/rust/.cargo/: config.toml
fastshare_ui/rust/src/: frb_generated.rs
fastshare_ui/rust/src/api/: simple.rs
fastshare_ui/rust_builder/: pubspec.yaml
fastshare_ui/rust_builder/android/: build.gradle  settings.gradle
fastshare_ui/rust_builder/ios/: rust_lib_fastshare_ui.podspec
fastshare_ui/rust_builder/linux/: CMakeLists.txt
fastshare_ui/rust_builder/macos/: rust_lib_fastshare_ui.podspec
fastshare_ui/rust_builder/windows/: CMakeLists.txt
fastshare_ui/web/: index.html  manifest.json
fastshare_ui/windows/: CMakeLists.txt
fastshare_ui/windows/flutter/: generated_plugins.cmake
fastshare_ui/windows/runner/: Runner.rc  main.cpp
src/: app.rs  bin_gui.rs  bin_rcgen.rs  lib.rs  main.rs
src/compression/: lz4.rs  mod.rs  zstd.rs
src/distributed/: chunk_router.rs  mod.rs  peer_manager.rs
src/network/: broadcast.rs  connection.rs  discovery.rs  handshake.rs  mod.rs
src/optimizer/: adaptive_stream_controller.rs  mod.rs  network_monitor.rs
src/qr/: generate.rs  mod.rs  scan.rs
src/security/: auth.rs  mod.rs  pairing.rs
src/storage/: chunk_storage.rs  file_reader.rs  file_writer.rs  mod.rs
src/transfer/: chunker.rs  mod.rs  receiver.rs  resume.rs  scheduler.rs  sender.rs
src/ui/: devices.rs  gui.rs  gui_bridge.rs  history.rs  home.rs  mod.rs  receive.rs  send.rs  transfer.rs
src/wifi_direct/: hotspot.rs  mod.rs  peer_connection.rs
(+9 files in other folders)
