[package]
name = "fastshare"
version = "0.1.0"
edition = "2021"
description = "Ultra-high-performance peer-to-peer distributed file transfer system"
license = "MIT"
authors = ["FastShare Contributors"]

[[bin]]
name = "fastshare"
path = "src/main.rs"

[dependencies]
# ── Async Runtime ──
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# ── QUIC Transport ──
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rcgen = "0.13"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Hashing ──
sha2 = "0.10"

# ── Compression ──
lz4_flex = "0.11"
zstd = "0.13"

# ── Discovery (mDNS) ──
mdns-sd = "0.11"

# ── Networking Utilities ──
socket2 = { version = "0.5", features = ["all"] }
local-ip-address = "0.6"

# ── UUID Generation ──
uuid = { version = "1", features = ["v4"] }

# ── Logging ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Error Handling ──
anyhow = "1"
thiserror = "2"

# ── Time ──
chrono = { version = "0.4", features = ["serde"] }

# ── File System ──
tempfile = "3"
dirs = "6"

# ── QR Code ──
qrcode = "0.14"
image = "0.25"

# ── Async Channels ──
async-channel = "2"
dashmap = "6"

# ── Byte manipulation ──
bytes = "1"

# ── Hex encoding ──
hex = "0.4"

# ── Platform-specific progress/notifications (optional) ──
indicatif = "0.17"
hostname = "0.4.2"
dioxus = { version = "0.7.3", features = ["desktop"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
